# Momentum-Lab

./: .gitignore  ARC_AGI3_STRATEGY.md  BABY0_PET_PLAN.md  BABYGEO0_PLAN.md  README.md  SISYPHUS_LIBRARIAN_BLUEPRINT.md  WASM_COMPRESSION_VISION.md  WASM_SETUP.md  package-lock.json  package.json  vite.config.ts
.context-guardian/: checkpoint.md  mission.md
.github/workflows/: deploy.yml
babyzero-cortex/: ARCHITECTURE.md  Cargo.toml  SAGE.md  auto_sessions.py  babyzero_grammar.json  babyzero_unknowns.json  cargo_build.bat
babyzero-cortex/arc-data/: 007bbfb7.json  0ca9ddb6.json  496994bd.json  7f4411dc.json
babyzero-cortex/harness/: babyzero_bridge.html  index.html  serve.py  vascular.html
babyzero-cortex/spec/: GEOI_SPEC.md  PERCEPTION_LAYERS.md  QJL_GRAMMAR.md
babyzero-cortex/src/: main.rs
garden/: BUILD_REPORT.md  CHAT_WITH_GATO.md  README_GARDEN.md  STUDENT_LAYER_SPEC.md  gato_chat_agent.md  tv_feed.py
garden/stimuli/: branch.txt  diamond.txt  echo.txt  fork.txt  grid.txt  loop.txt  mirror.txt  spiral.txt  tree.txt  wave.txt
geoai/: GEOAI_SPEC.md  baby_genesis.geoai
momentumlabteachingtool/: AGENTS.md  COUNCIL.md  README.md  VISION.md  council_architect.md  council_artist.md  council_brain.json  council_child.md  council_logician.md  server.ts  substrate.json
momentumlabteachingtool/src/: App.tsx  index.css
src/: App.tsx  index.css
src/components/: BlocklyEditor.tsx  DogBabyMode.tsx  DrawCanvas.tsx  GEOPlayground.tsx  GameCanvas.tsx  LibraryPanel.tsx  PatternBurst.tsx  PetMode.tsx  SpatialEye.tsx  StrokeHUD.tsx  SynestheticLayer.tsx  (+1 more)
(+11 files in other folders)
